--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,10 +45,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 //    implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 //    implementation files('libs\\YouTubeAndroidPlayerApi.jar')
+    implementation 'com.mapbox.maps:android:10.14.1'
+    implementation "com.mapbox.navigation:ui-dropin:2.10.1"
+    implementation "com.mapbox.navigation:android:2.10.1"
 }
